--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,10 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.datasource.url=jdbc:postgresql://localhost:5432/pets_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql=true
 
 spring.main.allow-bean-definition-overriding=true
+
+// used to not show trace error in response
+server.error.include-stacktrace=never
