integrate swagger documentation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,8 @@ spring.jpa.show-sql=true
 
 spring.main.allow-bean-definition-overriding=true
 
-// used to not show trace error in response
+# used to not show trace error in response
 server.error.include-stacktrace=never
+
+#reserved for swagger documentation
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
