--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.datasource.url=jdbc:postgresql://localhost:5432/pets_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+# Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql=true
 
